--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -3431,3 +3431,17 @@ header .SRHloader {
   }
     */
 }
+
+
+.visually-hidden:not(#a) {
+  position: absolute !important;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
